--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,8 +1,12 @@
 .login-wrapper {
-    margin: auto;
+    margin: 20rem auto;
     width: 20rem;
 }
 
 input {
+    margin-bottom: 2rem;
+}
+
+button {
     margin-bottom: 2rem;
 }
