--- a/src/app/statistic/statistic.component.html
+++ b/src/app/statistic/statistic.component.html
@@ -1,1 +1,8 @@
-<p>statistic works!</p>
+<main role="main" class="container">
+    <div class="jumbotron">
+      <h1>Statistic</h1>
+      <p class="lead">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam temporibus laborum facere dolor ipsum. Sint est laudantium recusandae labore explicabo, doloribus dolor, corporis, ab laboriosam nam iste quo beatae. Doloremque.
+      </p>
+    </div>
+  </main>
