--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<main role="main" class="container">
+    <div class="jumbotron">
+      <h1>Home</h1>
+      <p class="lead">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam temporibus laborum facere dolor ipsum. Sint est laudantium recusandae labore explicabo, doloribus dolor, corporis, ab laboriosam nam iste quo beatae. Doloremque.
+      </p>
+    </div>
+  </main>
